<resources>
    <string name="app_name">ATCGuide</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_main">Assistive Technology Consideration Guide</string>
    <string name="savedforms">\u25CF Saved Forms \u25CF</string>
    <string name="studentInformation">\u25CF Student Information \u25CF</string>
    <string name="part2">\u25CF Part 2 \u25CF</string>
    <string name="part3">\u25CF Part 3 \u25CF</string>
    <string name="part4">\u25CF Part 4 \u25CF</string>
    <string name="trial">Trial</string>
    <string name="trial1">1st Trial</string>
    <string name="trial2">2nd Trial</string>
    <string name="secondtrial">Second Trial</string>
    <string name="open">Open</string>
    <string name="preview">Preview</string>
    <string name="sampledata">\u25CF Sample Data \u25CF</string>
    <string name="title_activity_input_form">InputForm</string>
    <string name="student">Student ID</string>
    <string name="grade">Grade</string>
    <string name="school">School</string>
    <string name="participants">Participants</string>
    <string name="date">Date</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="preschool">Pre-school</string>
    <string name="kindergarten">Kindergarten</string>
    <string name="grade1">1st Grade</string>
    <string name="grade2">2nd Grade</string>
    <string name="grade3">3rd Grade</string>
    <string name="grade4">4th Grade</string>
    <string name="grade5">5th Grade</string>
    <string name="grade6">6th Grade</string>
    <string name="grade7">7th Grade</string>
    <string name="grade8">8th Grade</string>
    <string name="grade9">9th Grade</string>
    <string name="grade10">10th Grade</string>
    <string name="grade11">11th Grade</string>
    <string name="grade12">12th Grade</string>
    <string name="summary_end">In addition, you will discuss the outcome of the trial(s) during future meeting.</string>
    <string-array name="gradearray">
        <item>@string/preschool</item>
        <item>@string/kindergarten</item>
        <item>@string/grade1</item>
        <item>@string/grade2</item>
        <item>@string/grade3</item>
        <item>@string/grade4</item>
        <item>@string/grade5</item>
        <item>@string/grade6</item>
        <item>@string/grade7</item>
        <item>@string/grade8</item>
        <item>@string/grade9</item>
        <item>@string/grade10</item>
        <item>@string/grade11</item>
        <item>@string/grade12</item>
    </string-array>
    <string name="firstTrialSummary1">This form for the trial has been saved.</string>
    <string name="firstTrialSummary2">You will now need to implement new AT solutions.</string>
    <string name="firstTrialSummary3">After completing the trial(s), please reopen this file and select "Trial" on the home page to finish the remaining part of the form.</string>
    <string name="firstTrialSummary4">In addition, you will discuss the outcome of the trial(s) during future meeting.</string>
    <string name="secondTrialSummary1">This form for the second trial has been saved.</string>
    <string name="secondTrialSummary2">You will now need to implement new AT solutions.</string>
    <string name="secondTrialSummary3">After completing the trial(s), please reopen this file and select "2nd Trial" on the home page to finish the remaining part of the form.</string>
    <string name="secondTrialSummary4">In addition, you will discuss the outcome of the trial(s) during future meeting.</string>
    <string name="title_activity_iepgoals">IEPGoals</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_instructional_areas">InstructionalAreas</string>
    <string name="subtitle_instructional">Please check relevant instructional area(s).</string>
    <string name="listeninginstr">Listening</string>
    <string name="readinginstr">Reading</string>
    <string name="writinginstr">Writing</string>
    <string name="oralinstr">Oral Communication</string>
    <string name="activitiesinstr">Activities of Daily Living</string>
    <string name="positioninginstr">Positioning, Seating, and Mobility</string>
    <string name="otherinstr">Other</string>
    <string name="mathinstr">Math</string>
    <string name="spellinginstr">Spelling</string>
    <string name="computerinstr">Computer Access</string>
    <string name="studyinstr">Study/Organizational Skills</string>
    <string name="environmentinstr">Environment Controls</string>
    <string name="recreationinstr">Recreation, Leisure and Adaptive Play</string>
    <string name="part1">\u25CF  Part 1 \u25CF </string>
    <string name="completetaskform">Complete the following form(s) for each area identified.</string>
    <string name="instructionalarea">Instructional Area: </string>
    <string-array name="list1">
        <item name="listening">@string/listeninginstr</item>
        <item name="reading">@string/readinginstr</item>
        <item name="writing">@string/writinginstr</item>
        <item name="oral">@string/oralinstr</item>
        <item name="activities">@string/activitiesinstr</item>
        <item name="positioning">@string/positioninginstr</item>
    </string-array>
    <string-array name="list2">
        <item name="math">@string/mathinstr</item>
        <item name="spelling">@string/spellinginstr</item>
        <item name="computer">@string/computerinstr</item>
        <item name="study">@string/studyinstr</item>
        <item name="environment">@string/environmentinstr</item>
        <item name="recreation">@string/recreationinstr</item>
    </string-array>
    <string name="title_activity_iepreading">IEPReading</string>
    <string name="IEPReadingquestion">Accessible Instructional Materials</string>
    <string name="printdisability">Does the student benefit from accessible versions of printed educational material?</string>
    <string name="printalternative">Does the student benefit from alternate reading supports(e.g., read aloud, text-to-speech, large print, braille, accessible text)?</string>
    <string name="title_activity_task_form">TaskForm</string>
    <string name="areataskheader">Area/Task</string>
    <string name="areataskatheader">Area/Task/AT</string>
    <string name="ready">Ready</string>
    <string name="taskinfo">Briefly list currently being used strategies, accommodations, assistive technology on general education, special education, community, work and home settings.</string>
    <string name="when">Trial completed by when</string>
    <string name="taskname">Task Name</string>
    <string name="assistivetech">Assistive Technology</string>
    <string name="AIMCall">Since you selected \"Yes\" to these questions, do you want to determine the student\'s eligibility for AIM-VA services.</string>
    <string name="AIMTitle">AIM-VA Eligibility</string>
    <string name="title_activity_waiting">Waiting</string>
    <string name="title_activity_first_trial">FirstTrial</string>
    <string name="trial1nav">There have been changes in the student\'s functional or academic performance, or current strategies are NOT adequate and could require new assistive technology or a change in current AT (devices or services) provided.</string>
    <string name="trial2nav">There have been changes in the student\'s functional or academic performance, or current strategies are NOT adequate and could require new assistive technology or a change in current AT (devices or services) provided.</string>
    <string name="adequatesolution">Current strategies are adequate and documented in student\'s IEP.</string>
    <string name="title_activity_at__list">AT_List</string>
    <string name="reading">Reading</string>
    <string name="writing">Writing</string>
    <string name="spelling">Spelling</string>
    <string name="math">Math</string>
    <string name="Listening">Listening</string>
    <string name="Task">Task</string>
    <string name="discussion">Trial Discussion</string>
    <string name="attried">AT or Service tried: </string>
    <string-array name="atareas">
        <item>@string/reading</item>
        <item>@string/writing</item>
        <item>@string/spelling</item>
        <item>@string/math</item>
        <item>@string/Listening</item>
    </string-array>
    <string-array name="readSolutions">
        <item>Page fluffers (e.g. foam paper clipped to pages to separate them)</item>
        <item>Slant boards and book holders for positioning books</item>
        <item>Color Overlays</item>
        <item>Tracking strategies (e.g reading window, bar magnifier)</item>
        <item>Speaking spell checker or dictionary as a word recognition aid (e.g. Franklin Talking Dictionary)</item>
        <item>Reading Pen (e.g. Personal Reading Assistant, Quicktionary II)</item>
        <item>Audio-taped books (e.g. books-on-tape from Recordings for the Blind and Dyslexic, commercial audio books)</item>
        <item>Electronic books (e.g. teacher made, Bookshare)</item>
        <item>Portable reading system for digital audio books (e.g. ClassMate)</item>
        <item>Computer with graphic-based word processor (e.g. Writing with Symbols, Pix Writer)</item>
        <item>Computer with talking word processing software (e.g. Write:Outloud, IntelliTalk)</item>
        <item>Computer with word prediction software (e.g. Co:Writer, WordQ)</item>
        <item>Scanner and computer with form filling software to create electronic worksheets</item>
        <item>Computer with graphic word processor (e.g. Writing with Symbols, Pix Writer)</item>
        <item>Computer with text enlargement software (e.g. ZoomText)</item>
        <item>Computer with text reading software (e.g. Read:OutLoud, ReadPlease, Talk-to-Me)</item>
        <item>Computer-based advanced reading aids (e.g. Kerzweil 3000, WYNN)</item>
        <item>Solutions for converting text into alternative format (e.g. scanner with OCR software, Braille translation software, Braille printer)</item>
    </string-array>
    <string-array name="writeSolutions">
        <item>Pencil grip or other adapted writing aids</item>
        <item>Adapted paper (e.g. bold line, raised line. different spacing, secured to desk, paper stabilizers)</item>
        <item>Slant board</item>
        <item>Personal dry erase board</item>
        <item>Non-slip writing surface (e.g. Dycem)</item>
        <item>Tape recorder for dictated responses and note taking</item>
        <item>Portable word processor</item>
        <item>Notetaking device (e.g. Braille, adapted tape recorder, Smartboard, Notetaker)</item>
        <item>Computer with word processing software with spell and grammar checks (e.g. Microsoft Word)</item>
        <item>Computer with word processing software and outlining/webbing software (e.g. Inspiration, Kidspiration, DraftBuilder)</item>
        <item>Computer with graphic-based word processor (e.g. Writing with Symbols, Pix Writer)</item>
        <item>Computer with talking word processing software (e.g. Write:OutLoud, IntelliTalk)</item>
        <item>Computer with word prediction software (e.g. Co:Writer, WordQ)</item>
        <item>Scanner and computer with form filling software to create electronic worksheets</item>
    </string-array>
    <string name="trial_at_subtitle">Describe new AT or services to be tried or modified.</string>
    <string name="provider">Responsible person(s)/Provider(s)</string>
    <string name="trial_at_hint">Enter service here or click "+" button to look up the idea bank.</string>
</resources>