<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/atgback1"
    tools:context="edu.gmu.ttaconline.atcguide.IEPReading">

    <include
        android:id="@+id/action_bar"
        layout="@layout/action_form" />

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action_bar"
        android:layout_margin="16dp"
        android:background="@drawable/titleback"
        android:gravity="end"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/savedformback"
            android:text="@string/part2"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="16dp"
        android:background="@drawable/textviewback"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IEPReadingquestion"
            android:textColor="@color/text_black" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/printdisability"
            android:textColor="@color/text_black" />

        <RadioGroup
            android:id="@+id/read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/iepreadyes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_black"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/iepreadno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_black"
                android:text="@string/no" />
        </RadioGroup>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/printalternative"
            android:textColor="@color/text_black" />

        <RadioGroup
            android:id="@+id/iepalternative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/iepaltyes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textColor="@color/text_black"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/iepaltno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_black"
                android:text="@string/no" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nextbuttonlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/titleback"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/nextbutton"
            android:layout_width="@dimen/y120"
            android:layout_height="@dimen/x50"
            android:layout_marginTop="@dimen/x5"
            android:layout_marginBottom="@dimen/x5"
            android:padding="4dp"
            android:background="@drawable/mybutton"
            android:text="@string/next" />

    </LinearLayout>

</RelativeLayout>