<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/atgback1"
    tools:context="edu.gmu.ttaconline.atcguide.ui.IEPGoals">

    <include
        android:id="@+id/action_bar"
        layout="@layout/action_form" />

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action_bar"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/titleback"
        android:gravity="end"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/savedformback"
            android:text="@string/part1"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/textviewback"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black"
            android:text="Does the student have IEP goals that require assistive technology solutions in any instructional areas?" />

        <RadioGroup
            android:id="@+id/iep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/iepyes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textColor="@color/text_black"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/iepno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_black"
                android:text="@string/no" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nextbuttonlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/titleback"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/nextbutton"
            android:layout_width="@dimen/y120"
            android:layout_height="@dimen/x50"
            android:layout_marginTop="@dimen/x5"
            android:layout_marginBottom="@dimen/x5"
            android:padding="4dp"
            android:background="@drawable/mybutton"
            android:text="@string/next" />

    </LinearLayout>
</RelativeLayout>
