<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/atgback1"
    tools:context="edu.gmu.ttaconline.atcguide.FirstTrial" >

    <include
        android:id="@+id/action_bar"
        layout="@layout/action_form" />

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action_bar"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/titleback"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/trial_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/trial"
            android:textSize="24sp"
            android:textColor="@android:color/white" />
        <TextView
            android:id="@+id/part_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/savedformback"
            android:text="@string/part4"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/nextbuttonlayout"
        android:layout_below="@+id/header"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="100" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="30"
            android:background="@drawable/textviewback"
            android:baselineAligned="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="50"
                    android:textColor="@color/text_hint_title"
                    android:gravity="start"
                    android:text="@string/areataskatheader" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="50"
                    android:gravity="end"
                    android:textColor="@color/text_hint_title"
                    android:text="@string/ready" />
            </LinearLayout>

            <ListView
                android:id="@+id/instructionalAreasList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ListView>
        </LinearLayout>
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:fillViewport="true" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="100" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:textColor="@color/text_hint_title"
                    android:gravity="center_horizontal"
                    android:text="@string/completetaskform" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@drawable/taskback"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_hint_title"
                        android:text="@string/instructionalarea"
                        android:textSize="18sp" />
                    <Space
                        android:layout_width="5sp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/areatitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textStyle="bold"
                        android:textColor="@color/text_black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:background="@drawable/taskback"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Task"
                        android:textColor="@color/text_hint_title"
                       android:textSize="16sp"  />
<Space android:layout_width="10dp" android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/taskname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/taskname"
                        android:singleLine="true"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <TextView
                    android:background="@drawable/taskback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_hint_title"
                    android:text="@string/trial_at_subtitle"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:gravity="center_vertical"
                    android:background="@drawable/taskback"
                    android:orientation="horizontal" >

                    <ImageButton
                        android:id="@+id/addat"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="add at"
                        android:src="@drawable/plusstrategy" 
                        android:scaleType="fitXY"
                        android:layout_gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/at"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/x5"
                        android:background="@drawable/tasktextviewback"
                        android:hint="@string/trial_at_hint"
                        android:text=""
                        android:layout_marginLeft="@dimen/y5"
                        android:layout_marginRight="@dimen/y5"
                        android:lines="3"
                        android:inputType="textNoSuggestions"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="55"
                    android:background="@drawable/taskback"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/participants"
                            android:textColor="@color/text_hint_title"
                            android:text="@string/provider" />

                        <EditText
                            android:id="@+id/participants"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/x5"
                            android:padding="@dimen/x5"
                            android:layout_marginRight="@dimen/y5"
                            android:background="@drawable/tasktextviewback"
                            android:inputType="text" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_hint_title"
                            android:text="@string/when" />

                        <EditText
                            android:inputType="date"
                            android:hint="touch here to choose completion date"
                            android:id="@+id/date"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/tasktextviewback"
                            android:focusable="false"
                            android:layout_marginRight="@dimen/y5"
                            android:layout_marginTop="@dimen/x5"
                             />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/buttonsandviewlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:background="@drawable/rowback"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/radiolayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rowback"
                        android:orientation="horizontal" >
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:weightSum="10"
                        android:orientation="horizontal" >
                        <Button
                            android:id="@+id/addnewat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:layout_weight="3"
                            android:background="@drawable/taskbuttons"
                            android:text="Add new AT" />
                        <Space
                            android:layout_width="10sp"
                            android:layout_height="wrap_content" />
                        <Button
                            android:id="@+id/deleteat"
                            android:layout_weight="3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:background="@drawable/taskbuttons"
                            android:text="Delete AT" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nextbuttonlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/titleback"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/nextbutton"
            android:layout_width="@dimen/y120"
            android:layout_height="@dimen/x50"
            android:layout_marginTop="@dimen/x5"
            android:layout_marginBottom="@dimen/x5"
            android:padding="4dp"
            android:background="@drawable/mybutton"
            android:text="@string/next" />

    </LinearLayout>

</RelativeLayout>